test/Fail/OpaqueMutual.err
OpaqueMutual.agda:3,1-6,12: error: [Syntax.OpaqueInMutual]
Opaque blocks can not participate in mutual recursion. If the
opaque definitions are to be mutually recursive, move the 'mutual'
block inside the 'opaque' block.
